# bo4e-python-orm

./: .gitignore  .pre-commit-config.yaml  .pylintrc_autogen_code  README.md  alembic.ini  domain-specific-terms.txt  pyproject.toml  requirements.in  requirements.txt  tox.ini
.github/workflows/: coverage.yml  formatting.yml  integrationtests.yml  packaging_test.yml  python-publish.yml  pythonlint.yml  tests.yml  unittests.yml
db/: base.py  base_class.py
dev_requirements/: requirements-coverage.txt  requirements-formatting.txt  requirements-init_bo4e.in  requirements-init_bo4e.txt  requirements-linting.txt  requirements-packaging.txt  requirements-spell_check.txt  requirements-tests.txt  requirements-type_check.in  requirements-type_check.txt
migrations/: env.py
migrations/versions/: 463cdbe75f57_init.py  56f7f9957902_link_geschaeftspartner_and_adresse.py  5b34fed21cc5_init_adresse_and_geschaeftspartner.py  9d18ca349436_init_adresse.py  ee320e3ff02b_init_geschaeftspartner.py
mySQL_app/: .env  alembic.ini  auxiliary.py  docker-compose.yaml
mySQL_app/migrations/: env.py
postgresql_app/: .env  auxiliary.py  create_env_file.py  docker-compose.yaml
postgresql_app/migrations/: env.py
postgresql_app/migrations/versions/: c2be66297014_init.py  f224510f7d9f_init.py
postgresql_app/testing/integration_tests/: conftest.py  test_adresse.py  test_geschaeftspartner.py  test_postgresql_app.py
src/: _borm_version.py
src/bo4e/bo/: geschaeftspartner.py
src/bo4e/com/: adresse.py
src/borm/: __main__.py  logger.py  testing.py
src/borm/db/: base.py  base_class.py
src/borm/db/mysql_db/: .env.example  alembic.ini  auxiliary.py  create_env_file.py  docker-compose.yaml
src/borm/db/mysql_db/migrations/: env.py
src/borm/db/mysql_db/migrations/versions/: 9b70578f2d57_added_geschaeftspartner.py  d73a00baaa17_init.py
src/borm/db/postgresql_db/: alembic.ini  auxiliary.py  create_db.py  create_env_file.py
src/borm/db/postgresql_db/migrations/: env.py
src/borm/db/postgresql_db/migrations/versions/: 9f7a0a61d21e_init.py  ed03bb4cfa84_added_geschaeftspartner.py  efc0c44d61b4_added_adresse.py
src/borm/models/bo/: geschaeftspartner.py
src/borm/models/com/: adresse.py
src/db/: base.py  base_class.py
src/db/mysql_db/migrations/: env.py
src/db/postgresql_db/: auxiliary.py  docker-compose.yaml  env.py
src/db/postgresql_db/migrations/: env.py
src/models/bo/: geschaeftspartner.py
src/models/com/: adresse.py
tests/integrationtests/: conftest.py  test_adresse.py  test_geschaeftspartner.py  test_main.py
