[project]
name = "borm"
description = "A ORM tool to map between SQL databases and bo4e data model"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Hochfrequenz Unternehmensberatung GmbH", email = "info@hochfrequenz.de" }]
keywords = ["bo4e", "orm", "sql"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
]
dependencies = [
    "alembic>=1.12.0",
    "colorlog",
    "greenlet>=3.0.0",
    "psycopg>=3.1",
    "pydantic>=2.0.0",
    "pyhumps",
    "python-dotenv",
    "SQLAlchemy>=2.0.22",
    "pymysql",
    "cryptography",
    "sqlmodel>=0.0.14"
]     # add all the dependencies from pyproject.toml here, toodynamic = ["readme", "version"]
dynamic = ["readme", "version"]

[project.optional-dependencies]
coverage = [
    "coverage==7.8.2"
]
formatting = [
    "black==25.1.0",
    "isort==6.0.1"
]
init_bo4e = [
    "bo4e-python-generator==0.0.10",
    "bo4e-schema-tool==0.0.9",
    "datamodel-code-generator==0.33.0"
]
linting = [
    "pylint==3.3.6"
]
spell_check = [
    "codespell==2.4.1"
]
test_packaging = [
    "build==1.2.2.post1",
    "twine==6.1.0"
]
tests = [
    "pytest==8.4.2"
]
type_check = [
    "mypy==1.14.1"
]

[project.urls]
Changelog = "https://github.com/Hochfrequenz/bo4e-python-orm/releases"
Homepage = "https://github.com/Hochfrequenz/bo4e-python-orm"

[tool.black]
line-length = 120

[tool.isort]
line_length = 120
profile = "black"

[tool.pylint."MESSAGES CONTROL"]
max-line-length = 120

[build-system]
requires = ["hatchling>=1.8.0", "hatch-vcs", "hatch-fancy-pypi-readme"]
build-backend = "hatchling.build"



[tool.hatch.metadata.hooks.fancy-pypi-readme]
content-type = "text/markdown"
fragments = [{ path = "README.md" }]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/_borm_version.py"
template = '''
version = "{version}"
'''

[tool.hatch.build.targets.sdist]
exclude = ["/unittests"]

[tool.hatch.build.targets.wheel]
only-include = ["src"]
sources = ["src"]

[tool.mypy]
plugins = ["sqlalchemy.ext.mypy.plugin", "pydantic.mypy"]
follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true
# for strict mypy: (this is the tricky one :-))
disallow_untyped_defs = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true
